package mgmtmodel

import (
	"github.com/cherish-chat/xxim-server/common/pb"
	"github.com/cherish-chat/xxim-server/common/utils"
	"gorm.io/gorm"
	"time"
)

type Menu struct {
	Id         string `gorm:"column:id;primarykey;comment:'主键';"`
	Pid        string `gorm:"column:pid;not null;default:0;comment:'上级菜单'"`
	MenuType   string `gorm:"column:menuType;not null;default:'';comment:'权限类型: M=目录，C=菜单，A=按钮''"`
	MenuName   string `gorm:"column:menuName;not null;default:'';comment:'菜单名称'"`
	MenuIcon   string `gorm:"column:menuIcon;not null;default:'';comment:'菜单图标'"`
	MenuSort   int32  `gorm:"column:menuSort;not null;default:0;comment:'菜单排序'"`
	Perms      string `gorm:"column:perms;not null;default:'';comment:'权限标识'"`
	Paths      string `gorm:"column:paths;not null;default:'';comment:'路由地址'"`
	Component  string `gorm:"column:component;not null;default:'';comment:'前端组件'"`
	Selected   string `gorm:"column:selected;not null;default:'';comment:'选中路径'"`
	Params     string `gorm:"column:params;not null;default:'';comment:'路由参数'"`
	IsCache    bool   `gorm:"column:isCache;not null;default:0;comment:'是否缓存: 0=否, 1=是''"`
	IsShow     bool   `gorm:"column:isShow;not null;default:1;comment:'是否显示: 0=否, 1=是'"`
	IsDisable  bool   `gorm:"column:isDisable;not null;default:0;comment:'是否禁用: 0=否, 1=是'"`
	CreateTime int64  `gorm:"column:createTime;not null;comment:'创建时间'"`
	UpdateTime int64  `gorm:"column:updateTime;not null;comment:'更新时间'"`
}

func (m *Menu) TableName() string {
	return MGMT_TABLE_PREFIX + "menu"
}

func (m *Menu) ToPb() *pb.MSMenu {
	return &pb.MSMenu{
		Id:           m.Id,
		CreatedAt:    m.CreateTime,
		CreatedAtStr: utils.TimeFormat(m.CreateTime),
		Pid:          m.Pid,
		MenuType:     m.MenuType,
		MenuName:     m.MenuName,
		MenuIcon:     m.MenuIcon,
		MenuSort:     m.MenuSort,
		Perms:        m.Perms,
		Paths:        m.Paths,
		Component:    m.Component,
		Selected:     m.Selected,
		Params:       m.Params,
		IsCache:      m.IsCache,
		IsShow:       m.IsShow,
		IsDisable:    m.IsDisable,
		Children:     make([]*pb.MSMenu, 0),
	}
}

func genMenu(in []*pb.MSMenu) []*Menu {
	var menus []*Menu
	for _, v := range in {
		menus = append(menus, &Menu{
			Id:        v.Id,
			Pid:       v.Pid,
			MenuType:  v.MenuType,
			MenuName:  v.MenuName,
			MenuIcon:  v.MenuIcon,
			MenuSort:  v.MenuSort,
			Perms:     v.Perms,
			Paths:     v.Paths,
			Component: v.Component,
			Selected:  v.Selected,
			Params:    v.Params,
			IsCache:   v.IsCache,
			IsShow:    v.IsShow,
			IsDisable: v.IsDisable,
		})
		if len(v.Children) > 0 {
			menus = append(menus, genMenu(v.Children)...)
		}
	}
	return menus
}

func initMenu(tx *gorm.DB) {
	menus := genMenu([]*pb.MSMenu{
		// INSERT INTO `la_system_auth_menu` VALUES (1, 0, 'C', '工作台', 'el-icon-Monitor', 50, 'index:console', 'workbench', 'workbench/index', '', '', 1, 1, 0, 1650341765, 1668672757);
		{
			Id:           "1",
			CreatedAt:    time.Now().UnixMilli(),
			CreatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
			CreatedBy:    "system",
			UpdatedAt:    time.Now().UnixMilli(),
			UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
			UpdatedBy:    "system",
			Pid:          "",
			MenuType:     "C",
			MenuName:     "工作台",
			MenuIcon:     "el-icon-Monitor",
			MenuSort:     50,
			Perms:        "index:console",
			Paths:        "workbench",
			Component:    "workbench/index",
			Selected:     "",
			Params:       "",
			IsCache:      true,
			IsShow:       true,
			IsDisable:    false,
			Children:     make([]*pb.MSMenu, 0),
		},
		//INSERT INTO `la_system_auth_menu` VALUES (100, 0, 'M', '权限管理', 'el-icon-Lock', 44, '', 'permission', '', '', '', 0, 1, 0, 1650341765, 1662626201);
		{
			Id:           "100",
			UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
			UpdatedBy:    "system",
			Pid:          "",
			MenuType:     "M",
			MenuName:     "权限管理",
			MenuIcon:     "el-icon-Lock",
			MenuSort:     44,
			Perms:        "",
			Paths:        "permission",
			Component:    "",
			Selected:     "",
			Params:       "",
			IsCache:      false,
			IsShow:       true,
			IsDisable:    false,
			Children: []*pb.MSMenu{
				//INSERT INTO `la_system_auth_menu` VALUES (101, 100, 'C', '管理员', 'local-icon-wode', 0, 'system:admin:list', 'admin', 'permission/admin/index', '', '', 1, 1, 0, 1650341765, 1663301404);
				{
					Id:           "101",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "管理员",
					MenuIcon:     "local-icon-wode",
					MenuSort:     0,
					Perms:        "system:admin:list",
					Paths:        "admin",
					Component:    "permission/admin/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (102, 101, 'A', '管理员详情', '', 0, 'system:admin:detail', '', '', '', '', 0, 1, 0, 1650341765, 1660201785);
						{
							Id:           "102",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "101",
							MenuType:     "A",
							MenuName:     "管理员详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:admin:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (103, 101, 'A', '管理员新增', '', 0, 'system:admin:add', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "103",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "101",
							MenuType:     "A",
							MenuName:     "管理员新增",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:admin:add",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (104, 101, 'A', '管理员编辑', '', 0, 'system:admin:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "104",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "101",
							MenuType:     "A",
							MenuName:     "管理员编辑",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:admin:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (105, 101, 'A', '管理员删除', '', 0, 'system:admin:del', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "105",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "101",
							MenuType:     "A",
							MenuName:     "管理员删除",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:admin:del",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (106, 101, 'A', '管理员状态', '', 0, 'system:admin:disable', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "106",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "101",
							MenuType:     "A",
							MenuName:     "管理员状态",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:admin:disable",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
				//INSERT INTO `la_system_auth_menu` VALUES (110, 100, 'C', '角色管理', 'el-icon-Female', 0, 'system:role:list', 'role', 'permission/role/index', '', '', 1, 1, 0, 1650341765, 1663301451);
				{
					Id:           "110",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "角色管理",
					MenuIcon:     "el-icon-Female",
					MenuSort:     0,
					Perms:        "system:role:list",
					Paths:        "role",
					Component:    "permission/role/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (111, 110, 'A', '角色详情', '', 0, 'system:role:detail', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "111",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "110",
							MenuType:     "A",
							MenuName:     "角色详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:role:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (112, 110, 'A', '角色新增', '', 0, 'system:role:add', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "112",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "110",
							MenuType:     "A",
							MenuName:     "角色新增",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:role:add",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (113, 110, 'A', '角色编辑', '', 0, 'system:role:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "113",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "110",
							MenuType:     "A",
							MenuName:     "角色编辑",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:role:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (114, 110, 'A', '角色删除', '', 0, 'system:role:del', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "114",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "110",
							MenuType:     "A",
							MenuName:     "角色删除",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:role:del",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
				//INSERT INTO `la_system_auth_menu` VALUES (120, 100, 'C', '菜单管理', 'el-icon-Operation', 0, 'system:menu:list', 'menu', 'permission/menu/index', '', '', 1, 1, 0, 1650341765, 1663301388);
				{
					Id:           "120",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "菜单管理",
					MenuIcon:     "el-icon-Operation",
					MenuSort:     0,
					Perms:        "system:menu:list",
					Paths:        "menu",
					Component:    "permission/menu/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (121, 120, 'A', '菜单详情', '', 0, 'system:menu:detail', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "121",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "120",
							MenuType:     "A",
							MenuName:     "菜单详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:menu:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (122, 120, 'A', '菜单新增', '', 0, 'system:menu:add', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "122",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "120",
							MenuType:     "A",
							MenuName:     "菜单新增",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:menu:add",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (123, 120, 'A', '菜单编辑', '', 0, 'system:menu:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "123",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "120",
							MenuType:     "A",
							MenuName:     "菜单编辑",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:menu:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (124, 120, 'A', '菜单删除', '', 0, 'system:menu:del', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "124",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "120",
							MenuType:     "A",
							MenuName:     "菜单删除",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:menu:del",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
				//INSERT INTO `la_system_auth_menu` VALUES (130, 100, 'C', 'api管理', 'el-icon-Key', 0, 'system:apipath:list', 'apipath', 'permission/apipath/index', '', '', 1, 1, 0, 1650341765, 1650341765);
				{
					Id:           "130",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "api管理",
					MenuIcon:     "el-icon-Key",
					MenuSort:     0,
					Perms:        "system:apipath:list",
					Paths:        "apipath",
					Component:    "permission/apipath/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (131, 130, 'A', 'api新增', '', 0, 'system:apipath:add', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "131",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "130",
							MenuType:     "A",
							MenuName:     "api新增",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:apipath:add",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (132, 130, 'A', 'api编辑', '', 0, 'system:apipath:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "132",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "130",
							MenuType:     "A",
							MenuName:     "api编辑",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:apipath:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (133, 130, 'A', 'api删除', '', 0, 'system:apipath:del', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "133",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "130",
							MenuType:     "A",
							MenuName:     "api删除",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:apipath:del",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (134, 130, 'A', 'api详情', '', 0, 'system:apipath:detail', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "134",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "130",
							MenuType:     "A",
							MenuName:     "api详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:apipath:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
				//INSERT INTO `la_system_auth_menu` VALUES (140, 100, 'C', 'ip白名单', 'el-icon-List', 0, 'system:ipwhitelist:list', 'ipwhitelist', 'permission/ipwhitelist/index', '', '', 1, 1, 0, 1650341765, 1650341765);
				{
					Id:           "140",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "ip白名单",
					MenuIcon:     "el-icon-List",
					MenuSort:     0,
					Perms:        "system:ipwhitelist:list",
					Paths:        "ipwhitelist",
					Component:    "permission/ipwhitelist/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (141, 140, 'A', 'ip白名单新增', '', 0, 'system:ipwhitelist:add', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "141",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "140",
							MenuType:     "A",
							MenuName:     "ip白名单新增",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:ipwhitelist:add",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (142, 140, 'A', 'ip白名单修改', '', 0, 'system:ipwhitelist:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "142",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "140",
							MenuType:     "A",
							MenuName:     "ip白名单修改",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:ipwhitelist:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (143, 140, 'A', 'ip白名单删除', '', 0, 'system:ipwhitelist:del', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "143",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "140",
							MenuType:     "A",
							MenuName:     "ip白名单删除",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:ipwhitelist:del",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
						//INSERT INTO `la_system_auth_menu` VALUES (144, 140, 'A', 'ip白名单详情', '', 0, 'system:ipwhitelist:detail', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "144",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "140",
							MenuType:     "A",
							MenuName:     "ip白名单详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:ipwhitelist:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
				//INSERT INTO `la_system_auth_menu` VALUES (150, 100, 'C', '操作日志', 'el-icon-Notebook', 0, 'system:operationlog:list', 'operationlog', 'permission/operationlog/index', '', '', 1, 1, 0, 1650341765, 1650341765);
				{
					Id:           "150",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "100",
					MenuType:     "C",
					MenuName:     "操作日志",
					MenuIcon:     "el-icon-Notebook",
					MenuSort:     0,
					Perms:        "system:operationlog:list",
					Paths:        "operationlog",
					Component:    "permission/operationlog/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (151, 150, 'A', '操作日志详情', '', 0, 'system:operationlog:detail', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "151",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "150",
							MenuType:     "A",
							MenuName:     "操作日志详情",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "system:operationlog:detail",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
			},
		},
		//INSERT INTO `la_system_auth_menu` VALUES (200, 0, 'M', '运维管理', 'local-icon-KMSguanli', 49, '', 'devops', '', '', '', 0, 1, 0, 1650341765, 1650341765);
		{
			Id:           "200",
			UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
			UpdatedBy:    "system",
			Pid:          "0",
			MenuType:     "M",
			MenuName:     "运维管理",
			MenuIcon:     "local-icon-KMSguanli",
			MenuSort:     49,
			Perms:        "",
			Paths:        "devops",
			Component:    "",
			Selected:     "",
			Params:       "",
			IsCache:      false,
			IsShow:       true,
			IsDisable:    false,
			Children: []*pb.MSMenu{
				//INSERT INTO `la_system_auth_menu` VALUES (201, 200, 'C', '配置管理', 'el-icon-Setting', 0, '', 'devops/config', 'devops/config/index', '', '', 1, 1, 0, 1650341765, 1650341765);
				{
					Id:           "201",
					UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
					UpdatedBy:    "system",
					Pid:          "200",
					MenuType:     "C",
					MenuName:     "配置管理",
					MenuIcon:     "el-icon-Setting",
					MenuSort:     0,
					Perms:        "",
					Paths:        "devops/config",
					Component:    "devops/config/index",
					Selected:     "",
					Params:       "",
					IsCache:      true,
					IsShow:       true,
					IsDisable:    false,
					Children: []*pb.MSMenu{
						//INSERT INTO `la_system_auth_menu` VALUES (202, 201, 'A', '更新配置', '', 0, 'devops:config:edit', '', '', '', '', 0, 1, 0, 1650341765, 1650341765);
						{
							Id:           "202",
							UpdatedAtStr: time.Now().Format("2006-01-02 15:04:05"),
							UpdatedBy:    "system",
							Pid:          "201",
							MenuType:     "A",
							MenuName:     "更新配置",
							MenuIcon:     "",
							MenuSort:     0,
							Perms:        "devops:config:edit",
							Paths:        "",
							Component:    "",
							Selected:     "",
							Params:       "",
							IsCache:      false,
							IsShow:       true,
							IsDisable:    false,
							Children:     nil,
						},
					},
				},
			},
		},
	})
	for _, menu := range menus {
		insertIfNotFound(tx, menu.Id, menu)
	}
}
